<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_movies">

    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.reginafelicia.lk21.ui.movies.MoviesFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_tv_shows"
        android:name="com.reginafelicia.lk21.ui.tvshows.TvShowsFragment"
        android:label="@string/title_tv_shows"
        tools:layout="@layout/fragment_tv_shows" />

    <fragment
        android:id="@+id/navigation_favorite"
        app:moduleName="favorite_movie"
        android:name="com.reginafelicia.favorite_movie.ui.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

</navigation>